# os_lab2

./: .min_max.cpp.un~  CMakeLists.txt  _.swp  average.cpp  main.cpp  min_max.cpp  tests.cpp  threads.h
